# cmake_workshop

./: .gitignore
example1/: CMakeLists.txt  README.md
example1/finished/: CMakeLists.txt
example1/finished/src/: main.cpp
example1/src/: main.cpp
example2/: README.md
example2/exe/: CMakeLists.txt
example2/exe/src/: main.cpp
example2/finished/exe/: CMakeLists.txt
example2/finished/lib/: CMakeLists.txt
example2/finished/lib/cmake/: MPIWrapperConfig.cmake.in
example2/finished/lib/include/: mpiwrapper.h
example2/finished/lib/src/: mpiwrapper.cpp
example2/lib/: CMakeLists.txt
example2/lib/cmake/: MPIWrapperConfig.cmake.in
example2/lib/src/: mpiwrapper.cpp
